Toolbar dark mode fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,5 +26,9 @@ mat-sidenav, mat-sidenav-content {
     transition: all 500ms ease-in-out;
 }
 
+.ml-auto {
+    margin-left: auto;
+}
+
 
 
